# bert-wsd

./: .gitignore  README.md  TextualHeatmap.ipynb  colour_logging.py  dataset_statistics.ipynb  main.py  pyproject.toml  saliency.ipynb  saliency_lit.ipynb  saliency_own.ipynb
datagen/: __init__.py  dataset.py
modelling/: __init__.py  collator.py  collators.py  metrics.py  model.py  trainer.py
raw/: __init__.py
recasting/: __init__.py
slurm/: datagen-eval-all.sh  datagen-eval-bertwwm.sh  datagen-eval-deberta.sh  datagen-eval-roberta.sh  eval_checkpoints.sh  model-eval-all.sh  roberta-eval-datasets.sh  roberta-eval.sh  semcor+omsti-datasets.sh  semcor+omsti-training-probing.sh  semcor+omsti-training.sh  semcor-datasets.sh  semcor-training-probing.sh  semcor-training-raw.sh  semcor-training.sh
tests/datagen/: test_dataset.py
