[tool.poetry]
name = "bert-wsd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
