[tool.poetry]
name = "bert-wsd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
click = "^8.0.3"
click-option-group = "^0.5.3"
lxml = "^4.8.0"
nltk = "^3.7"
colorama = "^0.4.4"
pandas = "1.3.5"
transformers = "^4.16.2"
tqdm = "^4.63.0"
datasets = "^1.18.3"
numpy = "^1.21"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
